deployment/parts/keycloak.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: identity-provider
spec:
  replicas: 1
  selector:
    matchLabels:
      app: identity-provider
  template:
    metadata:
      labels:
        app: identity-provider
    spec:
      containers:
        - args:
            - -b
            - 0.0.0.0
            - -Djavax.net.ssl.trustStore=/etc/ssl/certs/java/cacerts
            - -Djavax.net.ssl.trustStorePassword=changeit
          image: jboss/keycloak:14.0.0
          name: beeyond-identity-provider
          readinessProbe:
            httpGet:
              path: "/auth/realms/master"
              port: 8080
          ports:
            - name: http
              containerPort: 8080
            - name: https
              containerPort: 8443
---
apiVersion: v1
kind: Service
metadata:
  name: identity-provider
spec:
  ports:
    - name: https
      port: 443
      targetPort: 8443
  selector:
    app: identity-provider
