deployment/parts/mongo-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-db
  template:
    metadata:
      labels:
        app: mongo-db
    spec:
      serviceAccountName: beeyond
      containers:
        - env:
            - name: MONGO_INITDB_DATABASE
              value: beeyond_validation_db
            - name: MONGO_INITDB_ROOT_PASSWORD
              value: beeyond
            - name: MONGO_INITDB_ROOT_USERNAME
              value: beeyond
          image: mongo:4.4.3
          livenessProbe:
            exec:
              command:
                - mongo
                - --disableImplicitSessions
                - --eval
                - "db.adminCommand('ping')"
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 6
          readinessProbe:
            exec:
              command:
                - mongo
                - --disableImplicitSessions
                - --eval
                - "db.adminCommand('ping')"
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 6
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-db
spec:
  ports:
    - name: "27017"
      port: 27017
      targetPort: 27017
  selector:
    app: mongo-db
