deployment/parts/nginx.yaml
# nginx Web Server
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-beeyond
spec:
  selector:
    matchLabels:
      app: frontend-beeyond
  template:
    metadata:
      labels:
        app: frontend-beeyond
    spec:
      serviceAccountName: beeyond
      containers:
        - name: beeyond-frontend
          image: ghcr.io/$GITHUB_ACCOUNT/beeyond-frontend:$VERSION
          ports:
            - containerPort: 80
            - containerPort: 443
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-beeyond
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: https
      port: 443
      targetPort: 443
  selector:
    app: frontend-beeyond
