deployment/parts/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: beeyond-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: beeyond-db
  template:
    metadata:
      labels:
        app: beeyond-db
    spec:
      serviceAccountName: beeyond
      containers:
        - env:
            - name: POSTGRES_DB
              value: beeyond_db
            - name: POSTGRES_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: postgres-db-admin
                  key: password
            - name: POSTGRES_USER
              valueFrom:
                secretKeyRef:
                  name: postgres-db-admin
                  key: username
          image: postgres:13.0
          name: beeyond-database
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-pv-claim
      volumes:
        - name: postgres-pv-claim
          persistentVolumeClaim:
            claimName: postgres-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: beeyond-db
spec:
  ports:
    - name: "5432"
      port: 5432
      targetPort: 5432
  selector:
    app: beeyond-db
