deployment/parts/quarkus.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-beeyond
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-beeyond
  template:
    metadata:
      labels:
        app: backend-beeyond
    spec:
      serviceAccountName: beeyond
      containers:
        - env:
            - name: BEEYOND_KEYCLOAK_HOST
              value: https://auth.cloud.htl-leonding.ac.at
            - name: BEEYOND_VALIDATION_HOST
              value: http://kubernetes-validation-beeyond:8180
            - name: BEEYOND_DATABASE_JDBC
              value: jdbc:postgresql://beeyond-db:5432
            - name: BEEYOND_DATABASE_DATABASE
              value: beeyond_db
            - name: BEEYOND_DATABASE_USERNAME
              valueFrom:
                secretKeyRef:
                  name: postgres-db-admin
                  key: username
            - name: BEEYOND_DATABASE_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: postgres-db-admin
                  key: password
            - name: BEEYOND_KEYCLOAK_SECRET
              valueFrom:
                secretKeyRef:
                  name: keycloak-secret
                  key: password
            - name: BEEYOND_KEYCLOAK_CLIENT-ID
              value: $KEYCLOAK_CLIENT_ID
            - name: BEEYOND_KEYCLOAK_REALM
              value: $KEYCLOAK_REALM
          image: ghcr.io/$GITHUB_ACCOUNT/beeyond-backend:$VERSION
          name: beeyond-backend
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: backend-beeyond
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: backend-beeyond
