deployment/parts/validation.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubernetes-validation-beeyond
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kubernetes-validation-beeyond
  template:
    metadata:
      labels:
        app: kubernetes-validation-beeyond
    spec:
      serviceAccountName: beeyond
      containers:
        - env:
            - name: BEEYOND_DATABASE_HOST
              value: mongo-db
            - name: BEEYOND_DATABASE_USER
              valueFrom:
                secretKeyRef:
                  name: mongo-db-admin
                  key: username
            - name: BEEYOND_DATABASE_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: mongo-db-admin
                  key: password
            - name: BEEYOND_AUTHENTICATION_URL
              value: https://auth.cloud.htl-leonding.ac.at
            - name: BEEYOND_AUTHENTICATION_REALM
              value: leocloud
            - name: GIN_MODE
              value: release
          image: ghcr.io/$GITHUB_ACCOUNT/beeyond-kubernetes-validation:$VERSION
          name: kubernetes-validation-beeyond
          ports:
            - containerPort: 8180
---
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-validation-beeyond
spec:
  ports:
    - name: http
      port: 8180
      targetPort: 8180
  selector:
    app: kubernetes-validation-beeyond
