deployment/parts/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: $HOST
      http:
        paths:
          - path: /$EMAIL(/|$)(.*)$
            pathType: Prefix
            backend:
              service:
                name: frontend-beeyond
                port:
                  number: 80
